--- a/actions.yml
+++ b/actions.yml
@@ -60,7 +60,8 @@ outputs:
     description: 'Path to a SARIF report file for the image'
   json:
     description: 'Path to a JSON report file for the image'
-
+  markdown:
+    description: 'Path to a markdown report file for the image'
 runs:
   using: "node20"
   main: "dist/index.js"
