--- a/package.json
+++ b/package.json
@@ -72,7 +72,8 @@
     "@actions/tool-cache": "^2.0.1",
     "@types/lodash": "^4.14.202",
     "loadsh": "^0.0.4",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "tablemark": "^3.0.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.11",
