--- a/.github/workflows/workflows/ci.yml
+++ b/.github/workflows/workflows/ci.yml
@@ -42,48 +42,6 @@ jobs:
         id: npm-ci-test
         run: npm run ci-test
 
-  test-docker:
-    name: Docker Tests
-    runs-on: ubuntu-latest
-
-    # Run a local registry to push to
-    services:
-      registry:
-        image: registry:2
-        ports:
-          - 5001:5000
-
-    env:
-      TEST_TAG: localhost:5001/actions/container-toolkit-action:latest
-
-    steps:
-      - name: Checkout
-        id: checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Docker BuildX
-        id: setup-buildx
-        uses: docker/setup-buildx-action@v3
-        with:
-          install: true
-          driver-opts: network=host
-
-      - name: Build the Container
-        id: build
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: true
-          tags: ${{ env.TEST_TAG }}
-
-      - name: Run the Container
-        id: run
-        env:
-          INPUT_MILLISECONDS: 2000
-        run: |
-          docker run \
-            --env INPUT_MILLISECONDS="${{ env.INPUT_MILLISECONDS }}" \
-            --rm ${{ env.TEST_TAG }}
 
   test-action:
     name: GitHub Actions Test
@@ -94,11 +52,13 @@ jobs:
         id: checkout
         uses: actions/checkout@v4
 
-      - name: Test Local Action
-        id: test-action
+        - name: "Scan test image"
         uses: ./
         with:
-          milliseconds: 2000
+          path: "./"
+          # grype-version: v0.54.0 # set the same version to test that current Grype binary wasn't overwritten by the latest version
+          fail-build: false # to prevent fail due to vuln:s on test image
+
 
       - name: Print Output
         id: output
