--- a/package.json
+++ b/package.json
@@ -70,18 +70,18 @@
     "@actions/exec": "^1.1.1",
     "@actions/github": "^6.0.0",
     "@actions/tool-cache": "^2.0.1",
-    "@types/lodash": "^4.14.202",
-    "loadsh": "^0.0.4",
     "lodash": "^4.17.21",
     "tablemark": "^3.0.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.11",
+    "@types/lodash": "^4.14.202",
     "@types/node": "^20.10.5",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vercel/ncc": "^0.38.1",
     "eslint": "^8.56.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-github": "^4.10.1",
     "eslint-plugin-jest": "^27.6.0",
     "eslint-plugin-jsonc": "^2.11.1",
