--- a/action.yml
+++ b/action.yml
@@ -4,11 +4,11 @@ description: 'Run Oligo Scanner on pull requests'
 inputs:
   base-path:
     description:
-      'The base path to scan.  This is the path that will be used to resolve the differnce'
+      'The base path to scan. This is the path that will be used to resolve the
+      differnce'
     required: true
   path:
-    description:
-      'The path to scan'
+    description: 'The path to scan'
     required: true
   fail-build:
     description:
@@ -63,5 +63,5 @@ outputs:
   markdown:
     description: 'Path to a markdown report file for the image'
 runs:
-  using: "node20"
-  main: "dist/index.js"
+  using: 'node20'
+  main: 'dist/index.js'
