--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,6 +56,7 @@ jobs:
           path: './'
           grype-version: v0.73.4 # set the same version to test that current Grype binary wasn't overwritten by the latest version
           fail-build: false # to prevent fail due to vuln:s on test image
+          output-format: json
       - name: Print Output
         id: output
         run: echo "${{ steps.test-action.outputs.markdown }}"
