removing uneeded params

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,12 +54,11 @@ jobs:
         id: test-action
         with:
           path: './'
-          grype-version: v0.73.4 # set the same version to test that current Grype binary wasn't overwritten by the latest version
-          fail-build: 'false' # to prevent fail due to vuln:s on test image
+        
+          fail-build: false # to prevent fail due to vuln:s on test image
           output-format: json
           severity-cutoff: high
-          add-cpes-if-none: true
-          by-cve: true
+        
 
       - name: Print Output
         id: output
