upgrade version, small fixes

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "url": "git+https://github.com/OligoCyberSecurity/oligo-code-scanner.git"
   },
   "bugs": {
-    "url": "hhttps://github.com/OligoCyberSecurity/oligo-code-scanner/issues"
+    "url": "https://github.com/OligoCyberSecurity/oligo-code-scanner/issues"
   },
   "keywords": [
     "actions",
